--- a/PC_Configurator/dictionaries/Styles.xaml
+++ b/PC_Configurator/dictionaries/Styles.xaml
@@ -73,4 +73,12 @@
         <Setter Property="Visibility" Value="Visible"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
     </Style>
+   <Style x:Key="ConfigurationPageTextBox" TargetType="{x:Type TextBox}">
+       <Setter Property="FontSize" Value="20"/>
+       <Setter Property="Height" Value="40"/>
+       <Setter Property="Width" Value="500"/>
+       <Setter Property="HorizontalContentAlignment" Value="Center"/>
+       <Setter Property="Background" Value="White"/>
+       <Setter Property="Margin" Value="10"/>
+   </Style>
 </ResourceDictionary>
