--- a/PC_Configurator/views/RamSelectionPage.xaml
+++ b/PC_Configurator/views/RamSelectionPage.xaml
@@ -8,43 +8,52 @@
       Title="RamSelectionPage">
     <Grid>
         <Border>
-            <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                <ListView x:Name="RamsListView" SelectionChanged="RamsListView_OnSelectionChanged"
-                          HorizontalAlignment="Center" BorderBrush="Transparent">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Border Style="{DynamicResource ProductBorder}">
-                                <StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">FullName:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding FullName}"></Label>
+            <StackPanel>
+                <Border Style="{DynamicResource SubmitButton}" Background="#e95e50" MaxWidth="400" Margin="20" MouseLeftButtonUp="Border_MouseLeftButtonUp">
+                    <Label Content="Clear Selection" FontSize="20" HorizontalContentAlignment="Center"
+                           VerticalContentAlignment="Center" Margin="0 0 0 6" />
+                </Border>
+                <ScrollViewer VerticalScrollBarVisibility="Hidden">
+                    <ListView x:Name="RamsListView" SelectionChanged="RamsListView_OnSelectionChanged"
+                              HorizontalAlignment="Center" BorderBrush="Transparent">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border Style="{DynamicResource ProductBorder}">
+                                    <StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">FullName:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding FullName}"></Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">Producer:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding Producer}"></Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">Type:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding Type}"></Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">Capacity:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding Capacity}"></Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">NumberOfModules:</Label>
+                                            <Label Style="{DynamicResource ProductValue}"
+                                                   Content="{Binding NumberOfModules}">
+                                            </Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">Frequency:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding Frequency}"></Label>
+                                        </StackPanel>
                                     </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Producer:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Producer}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Type:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Type}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Capacity:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Capacity}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">NumberOfModules:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding NumberOfModules}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Frequency:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Frequency}"></Label>
-                                    </StackPanel>
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </ScrollViewer>
+                                </Border>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </ScrollViewer>
+
+            </StackPanel>
         </Border>
     </Grid>
 </Page>
