--- a/PC_Configurator/views/HddSelectionPage.xaml
+++ b/PC_Configurator/views/HddSelectionPage.xaml
@@ -9,40 +9,55 @@
     <Grid>
         <Border>
             <ScrollViewer VerticalScrollBarVisibility="Hidden">
-                <ListView x:Name="HddsListView" SelectionChanged="HddsListView_OnSelectionChanged" HorizontalAlignment="Center" BorderBrush="Transparent">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Border Style="{DynamicResource ProductBorder}">
-                                <StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">FullName:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding FullName}"></Label>
+                <StackPanel>
+                    <Border Style="{DynamicResource SubmitButton}" Background="#e95e50" MaxWidth="400" Margin="20"
+                            MouseLeftButtonUp="Border_MouseLeftButtonUp">
+                        <Label Content="Clear Selection" FontSize="20" HorizontalContentAlignment="Center"
+                               VerticalContentAlignment="Center" Margin="0 0 0 6" />
+                    </Border>
+                    <ListView x:Name="HddsListView" SelectionChanged="HddsListView_OnSelectionChanged"
+                              HorizontalAlignment="Center" BorderBrush="Transparent">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Border Style="{DynamicResource ProductBorder}">
+                                    <StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">FullName:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding FullName}"></Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">Producer:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding Producer}"></Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">FormFactor:</Label>
+                                            <Label Style="{DynamicResource ProductValue}"
+                                                   Content="{Binding FormFactor}">
+                                            </Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">MemoryCapacity:</Label>
+                                            <Label Style="{DynamicResource ProductValue}"
+                                                   Content="{Binding MemoryCapacity}">
+                                            </Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">Interface:</Label>
+                                            <Label Style="{DynamicResource ProductValue}" Content="{Binding Interface}"></Label>
+                                        </StackPanel>
+                                        <StackPanel Style="{DynamicResource ProductStackPanel}">
+                                            <Label Style="{DynamicResource ProductLabel}">RotatingSpeed:</Label>
+                                            <Label Style="{DynamicResource ProductValue}"
+                                                   Content="{Binding ReadingSpeed}">
+                                            </Label>
+                                        </StackPanel>
                                     </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Producer:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Producer}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">FormFactor:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding FormFactor}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">MemoryCapacity:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding MemoryCapacity}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">Interface:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding Interface}"></Label>
-                                    </StackPanel>
-                                    <StackPanel Style="{DynamicResource ProductStackPanel}">
-                                        <Label Style="{DynamicResource ProductLabel}">RotatingSpeed:</Label>
-                                        <Label Style="{DynamicResource ProductValue}" Content="{Binding ReadingSpeed}"></Label>
-                                    </StackPanel>
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                                </Border>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+
+                </StackPanel>
             </ScrollViewer>
         </Border>
     </Grid>
