--- a/PC_Configurator/views/ConfigurationsPage.xaml
+++ b/PC_Configurator/views/ConfigurationsPage.xaml
@@ -1,19 +1,17 @@
-﻿<Page x:Class="PC_Configurator.views.CurrentConfigurationPage"
+﻿<Page x:Class="PC_Configurator.views.ConfigurationsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PC_Configurator.views"
-      mc:Ignorable="d"
-      Title="CurrentConfigurationPage">
+      mc:Ignorable="d" 
+      Title="ConfigurationsPage">
+
     <Grid>
         <ScrollViewer VerticalScrollBarVisibility="Hidden">
             <StackPanel HorizontalAlignment="Center">
-                <Label FontSize="24" HorizontalAlignment="Center" FontWeight="Bold">Configuration name</Label>
-                <TextBox x:Name="ConfigurationName" Style="{DynamicResource ConfigurationPageTextBox}"/>
-                <Border x:Name="SaveButton" Margin="10" Style="{DynamicResource SubmitButton}" MouseLeftButtonUp="SaveButton_OnMouseLeftButtonUp">
-                    <Label HorizontalAlignment="Center" Style="{DynamicResource ProductLabel}">Save Configuration</Label>
-                </Border>
+                <Label FontSize="24" HorizontalAlignment="Center" FontWeight="Bold" Content="Configurations"/>
+                <ComboBox x:Name="configSelect" SelectionChanged="ConfigSelect_OnSelectionChanged" HorizontalContentAlignment="Center" MaxWidth="200"/>
                 <ListView x:Name="SelectedCpu" Style="{DynamicResource ConfigurationPageProductListView}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -353,4 +351,5 @@
             </StackPanel>
         </ScrollViewer>
     </Grid>
+
 </Page>
